--- a/Git_versjonskontroll/spraak.html
+++ b/Git_versjonskontroll/spraak.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Velge språk</title>
+    <title>Språkvalg</title>
 </head>
 <body>
-    <h1 id="overskrift">Velkommen til Nannestad</h1>
-    <select id="selSpraak">
-        <option>Velg språk her...</option>
-        <option>Norsk</option>
-        <option>Japansk</option>
+    <h1>Velg ditt foretrukne språk:</h1>
+<label for="language">Språk:</label>
+<select id="language" name="language" onchange="espråk()">
+    <option value="no">Norsk</option>
+    <option value="jp">Japansk</option>
+    <option value="rs">Russisk</option>
     </select>
-    <p id="txt">Nannestad er en vakker og intim landsby i naturrike omgivelser.
-        Nannestad er kjent for skisport og rikt friluftsliv. Det er mange
-        fiskevann, og Leira er vår elv som renner ut i Øyeren ved Lillestrøm.
-    </p>
+    <p id="message">Nannestad videregående skole ligger vakkert til i det grønne landskapet i Norge.</p>
+<script>
+function espråk() {
+    var languageSelect = document.getElementById("language");
+    var message = document.getElementById("message");
+    var selectedLanguage = languageSelect.value;
 
-    <script>
-
-        function endreSpraak(){
-            let valgtSpraak = selSpraak.value;
-           // Hjelp
-        }
-        
-    selSpraak.addEventListener("change", endreSpraak);
-    
-    </script>
+    if (selectedLanguage === "no") {
+        message.textContent = "Nannestad videregående skole ligger vakkert til i det grønne landskapet i Norge.";
+    } else if (selectedLanguage === "jp") {
+        message.textContent = "ナンネスタッド高等学校は、ノルウェーの美しい緑豊かな風景に位置しています。.";
+    } else if (selectedLanguage === "rs") {
+        message.textContent = "Наннестад старшая школа находится в живописных местах в зеленой местности Норвегии..";
+    }
+    }
+</script>
 </body>
 </html>
+
